--- a/_Analysis/IPython Walkthroughs/Linear_regression_on_eyetracker_data.ipynb
+++ b/_Analysis/IPython Walkthroughs/Linear_regression_on_eyetracker_data.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import os, sys\n",
-    "lib_path = os.path.abspath(os.path.join('..','_Libraries'))\n",
+    "lib_path = os.path.abspath(os.path.join('../..','_Libraries'))\n",
     "sys.path.append(lib_path)\n",
     "from rlabs_libutils import DataStruct, select_data, create_outlier_df, find_nearest_above\n",
     "import matplotlib.pyplot as plt\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -61,11 +61,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Python27\\lib\\site-packages\\pandas\\computation\\expressions.py:21: UserWarning: The installed version of numexpr 1.4.2 is not supported in pandas and will be not be used\n",
+      "The minimum supported version is 2.1\n",
+      "\n",
+      "  \"version is 2.1\\n\".format(ver=ver), UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "outlier_threshold = 100  # velocity values over 100 will be outliers.\n",
     "ambiguousoutlier_th = 80 # velocity values between 80 and 100 will be ambiguous outliers.\n",
@@ -86,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -165,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -321,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -336,11 +347,7 @@
     "outlier_idx = np.where(df['Outlierfiltered'])[0]\n",
     "n = len(outlier_idx)-1\n",
     "\n",
-    "rf_struct1 = []\n",
-    "rf_struct2 = []\n",
-    "rf_bfidx = []\n",
-    "\n",
-    "m1_struct = []\n",
+    "m1_struct = [None]*n\n",
     "\n",
     "for i in range(n):\n",
     "    if r_squared_array[i] < badfitth:\n",
@@ -358,7 +365,7 @@
     "            use_m1 = rthere > 0\n",
     "            if use_m1:\n",
     "                tmp_m1 = method1_useamboutls(df, itvl_start, itvl_end, minsamples)\n",
-    "                m1_struct.append(tmp_m1)"
+    "                m1_struct.insert(i,tmp_m1)"
    ]
   },
   {
@@ -390,19 +397,19 @@
     "    ax[0].annotate('{0}'.format(\"%.2f\" % r_squared_array[i]), xy=(x,y), horizontalalignment='center', verticalalignment='bottom')\n",
     "\n",
     "\n",
-    "# plot refined linear regression --------------------------------------------------------------------------------------------\n",
-    "for fit in (m1_struct):\n",
-    "    for j in range(len(fit)):\n",
-    "        a = fit[j]\n",
-    "        axaxis = np.array([a['start'],a['end']])\n",
-    "        ax[0].plot(axaxis, a['slope']*axaxis + a['intercept'], 'y')\n",
+    "    # plot refined linear regression --------------------------------------------------------------------------------------------\n",
+    "    if m1_struct[i] != None:\n",
+    "        for j in range(len(m1_struct[i])):\n",
+    "            a = m1_struct[i][j]\n",
+    "            axaxis = np.array([a['start'],a['end']])\n",
+    "            ax[0].plot(axaxis, a['slope']*axaxis + a['intercept'], 'y')\n",
     "\n",
-    "        # compute annotation coordinates\n",
-    "        x = axaxis[0] + np.diff(axaxis)[0]/2.0\n",
-    "        y = np.diff(a['slope']*axaxis + a['intercept'])[0]/2.0 + 2\n",
-    "        ax[0].annotate('{0}'.format(\"%.2f\" % a['r_value']**2), xy=(x,y), horizontalalignment='center', verticalalignment='bottom')\n",
-    "    \n",
-    "# ------------------------------------------------------------------------------------------------------------\n",
+    "            # compute annotation coordinates\n",
+    "            x = axaxis[0] + np.diff(axaxis)[0]/2.0\n",
+    "            y = np.diff(a['slope']*axaxis + a['intercept'])[0]/2.0 + 2\n",
+    "            ax[0].annotate('{0}'.format(\"%.2f\" % a['r_value']**2), xy=(x,y), horizontalalignment='center', verticalalignment='bottom')\n",
+    "\n",
+    "    # ------------------------------------------------------------------------------------------------------------\n",
     "    \n",
     "ax[1].plot(df['time'], df['velocity'])\n",
     "ax[1].scatter(df['time'][df['Outlierfiltered']], df['velocity'][df['Outlierfiltered']],color ='r')\n",
@@ -425,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -440,9 +447,9 @@
     "outlier_idx = np.where(df['Outlierfiltered'])[0]\n",
     "n = len(outlier_idx)-1\n",
     "\n",
-    "rf_struct1 = []\n",
-    "rf_struct2 = []\n",
-    "rf_bfidx = []\n",
+    "rf_struct1 = [None]*n\n",
+    "rf_struct2 = [None]*n\n",
+    "rf_bfidx = [None]*n\n",
     "\n",
     "for i in range(n):\n",
     "    if r_squared_array[i] < badfitth:\n",
@@ -455,9 +462,9 @@
     "            itvl_end = outlier_idx[i+1]\n",
     "            sgmts1, sgmts2, bfidx = method2_splitintrvl(df, itvl_start, itvl_end, maxdivisions, minsamples, fs = 120.0)\n",
     "            \n",
-    "            rf_struct1.append(sgmts1)\n",
-    "            rf_struct2.append(sgmts2)\n",
-    "            rf_bfidx.append(bfidx)"
+    "            rf_struct1.insert(i,sgmts1)\n",
+    "            rf_struct2.insert(i,sgmts2)\n",
+    "            rf_bfidx.insert(i,bfidx)"
    ]
   },
   {
@@ -489,32 +496,30 @@
     "    ax[0].annotate('{0}'.format(\"%.2f\" % r_squared_array[i]), xy=(x,y), horizontalalignment='center', verticalalignment='bottom')\n",
     "\n",
     "\n",
-    "# plot refined linear regression --------------------------------------------------------------------------------------------\n",
-    "\n",
-    "for i in range(len(rf_struct1)):\n",
-    "    a = rf_struct1[i][rf_bfidx[i]]\n",
-    "\n",
-    "    axaxis = np.array([a['start'],a['end']])\n",
-    "    ax[0].plot(axaxis, a['slope']*axaxis + a['intercept'], 'y')\n",
-    "\n",
-    "    # compute annotation coordinates\n",
-    "    x = axaxis[0] + np.diff(axaxis)[0]/2.0\n",
-    "    y = np.diff(a['slope']*axaxis + a['intercept'])[0]/2.0 + 2\n",
-    "    ax[0].annotate('{0}'.format(\"%.2f\" % a['r_value']**2), xy=(x,y), horizontalalignment='center', verticalalignment='bottom')\n",
+    "    # plot refined linear regression --------------------------------------------------------------------------------------------\n",
+    "    if rf_struct1[i] != None:\n",
+    "        a = rf_struct1[i][rf_bfidx[i]]\n",
     "    \n",
-    "    ax[0].plot([a['end'],a['end']], [-np.mean(df['LEpos_int']), np.mean(df['LEpos_int'])], 'y')\n",
+    "        axaxis = np.array([a['start'],a['end']])\n",
+    "        ax[0].plot(axaxis, a['slope']*axaxis + a['intercept'], 'y')\n",
     "\n",
-    "for i in range(len(rf_struct2)):\n",
-    "    a = rf_struct2[i][rf_bfidx[i]]\n",
+    "        # compute annotation coordinates\n",
+    "        x = axaxis[0] + np.diff(axaxis)[0]/2.0\n",
+    "        y = np.diff(a['slope']*axaxis + a['intercept'])[0]/2.0 + 2\n",
+    "        ax[0].annotate('{0}'.format(\"%.2f\" % a['r_value']**2), xy=(x,y), horizontalalignment='center', verticalalignment='bottom')\n",
+    "    \n",
+    "        ax[0].plot([a['end'],a['end']], [-np.mean(df['LEpos_int']), np.mean(df['LEpos_int'])], 'y')\n",
     "\n",
-    "    axaxis = np.array([a['start'],a['end']])\n",
-    "    ax[0].plot(axaxis, a['slope']*axaxis + a['intercept'], 'y')\n",
+    "        a = rf_struct2[i][rf_bfidx[i]]\n",
     "\n",
-    "    # compute annotation coordinates\n",
-    "    x = axaxis[0] + np.diff(axaxis)[0]/2.0\n",
-    "    y = np.diff(a['slope']*axaxis + a['intercept'])[0]/2.0 + 2\n",
-    "    ax[0].annotate('{0}'.format(\"%.2f\" % a['r_value']**2), xy=(x,y), horizontalalignment='center', verticalalignment='bottom')\n",
-    "# ------------------------------------------------------------------------------------------------------------\n",
+    "        axaxis = np.array([a['start'],a['end']])\n",
+    "        ax[0].plot(axaxis, a['slope']*axaxis + a['intercept'], 'y')\n",
+    "\n",
+    "        # compute annotation coordinates\n",
+    "        x = axaxis[0] + np.diff(axaxis)[0]/2.0\n",
+    "        y = np.diff(a['slope']*axaxis + a['intercept'])[0]/2.0 + 2\n",
+    "        ax[0].annotate('{0}'.format(\"%.2f\" % a['r_value']**2), xy=(x,y), horizontalalignment='center', verticalalignment='bottom')\n",
+    "    # -----------------------------------------------------------------------------------------------------------------------------\n",
     "    \n",
     "ax[1].plot(df['time'], df['velocity'])\n",
     "ax[1].scatter(df['time'][df['Outlierfiltered']], df['velocity'][df['Outlierfiltered']],color ='r')\n",
@@ -654,28 +659,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-131-a35b8409788e>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-131-a35b8409788e>\"\u001b[1;36m, line \u001b[1;32m6\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "badfit_idx = np.where(r_squared_array < badfitth)[0]\n",
+    "# badfit_idx = np.where(r_squared_array < badfitth)[0]\n",
     "\n",
-    "for bfidx in badfit_idx:\n",
-    "#     r_squared_array[bfidx]\n",
-    "    print bfidx, outlier_idx[bfidx],outlier_idx[bfidx+1]\n",
+    "# for bfidx in badfit_idx:\n",
+    "\n",
+    "#     print bfidx, outlier_idx[bfidx],outlier_idx[bfidx+1]\n",
+    "\n",
     "    \n",
-    "    print m1_struct[]\n",
+    "#     print m1_struct[bfidx] == None, rf_struct2[bfidx] == None\n",
     "    \n",
     "    \n",
     "    "
@@ -686,6 +683,51 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
