Linear_regression_on_eyetracker_data: normalize how linear regressions are done
Original linear regression uses the function regressionbtwpoints as the refinement methods.

--- a/_Analysis/IPython Walkthroughs/Linear_regression_on_eyetracker_data.ipynb
+++ b/_Analysis/IPython Walkthroughs/Linear_regression_on_eyetracker_data.ipynb
@@ -97,27 +97,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 145,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "outlier_idx = np.where(df['Outlierfiltered'])[0]\n",
-    "slope_array = []\n",
-    "intercept_array = []\n",
-    "r_value_array = []\n",
     "n = len(outlier_idx)-1\n",
+    "lr_struct = []\n",
     "for i in range(n):\n",
-    "    lr_idx = np.arange(outlier_idx[i],outlier_idx[i+1])   # linear regression idx. outlier and next outlier\n",
-    "    slope, intercept, r_value, p_value, std_err = stats.linregress(df['time'][lr_idx], df['LEpos_int'][lr_idx])\n",
-    "    \n",
-    "    slope_array.append(slope)\n",
-    "    intercept_array.append(intercept)\n",
-    "    r_value_array.append(r_value)\n",
-    "    \n",
-    "r_squared_array = np.power(r_value_array,2)"
+    "    lr_struct.append(regressionbtwpoints(df, outlier_idx[i], outlier_idx[i+1]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -142,13 +142,15 @@
     "\n",
     "for i in range(n):\n",
     "    \n",
-    "    ax[0].plot(df['time'][outlier_idx[i:i+2]], slope_array[i]*df['time'][outlier_idx[i:i+2]] + intercept_array[i], 'r')\n",
-    "\n",
-    "    # compute annotation coordinates\n",
-    "    x = df['time'][outlier_idx[i]] + np.diff(df['time'][outlier_idx[i:i+2]])[0]/2.0\n",
-    "    y = np.diff(slope_array[i]*df['time'][outlier_idx[i:i+2]] + intercept_array[i])[0]/2.0\n",
-    "    ax[0].annotate('{0}'.format(\"%.2f\" % r_squared_array[i]), xy=(x,y), horizontalalignment='center', verticalalignment='bottom')\n",
+    "    a = lr_struct[i]\n",
+    "    axaxis = np.array([a['start'],a['end']])\n",
+    "    ax[0].plot(axaxis, a['slope']*axaxis + a['intercept'], 'r')\n",
     "    \n",
+    "    # compute annotation coordinates\n",
+    "    x = axaxis[0] + np.diff(axaxis)[0]/2.0\n",
+    "    y = np.diff(a['slope']*axaxis + a['intercept'])[0]/2.0 + 2\n",
+    "    ax[0].annotate('{0}'.format(\"%.2f\" % a['r_value']**2), xy=(x,y), horizontalalignment='center', verticalalignment='bottom')\n",
+    "   \n",
     "ax[1].plot(df['time'], df['velocity'])\n",
     "ax[1].scatter(df['time'][df['Outlierfiltered']], df['velocity'][df['Outlierfiltered']],color ='r')\n",
     "ax[1].scatter(df['time'][df['isAmbiguousOutlier']], df['velocity'][df['isAmbiguousOutlier']],color ='y')\n",
@@ -649,33 +651,41 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Get the best fit from the two methods"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 127,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# badfit_idx = np.where(r_squared_array < badfitth)[0]\n",
+    "badfit_idx = np.where(r_squared_array < badfitth)[0]\n",
+    "refinedout = [None] * n\n",
     "\n",
-    "# for bfidx in badfit_idx:\n",
-    "\n",
-    "#     print bfidx, outlier_idx[bfidx],outlier_idx[bfidx+1]\n",
-    "\n",
-    "    \n",
-    "#     print m1_struct[bfidx] == None, rf_struct2[bfidx] == None\n",
-    "    \n",
-    "    \n",
-    "    "
+    "for badidx in badfit_idx:\n",
+    "    if m1_struct[badidx] != None:           \n",
+    "        cumulative_rsqrd_m1 = np.sum(np.power(np.array([item['r_value'] for item in m1_struct[badidx]]),2))\n",
+    "        cumulative_rsqrd_m2 = np.sum(np.power(np.array([rf_struct1[badidx][rf_bfidx[badidx]]['r_value'], rf_struct2[badidx][rf_bfidx[badidx]]['r_value']]),2))\n",
+    "        \n",
+    "        if cumulative_rsqrd_m1 < cumulative_rsqrd_m2:\n",
+    "            refinedout.insert(badidx, [rf_struct1[badidx][rf_bfidx[badidx]], rf_struct2[badidx][rf_bfidx[badidx]]])\n",
+    "        else:\n",
+    "            refinedout.insert(badidx, m1_struct[badidx])\n",
+    "            \n",
+    "        cumulative_rsqrd_rf = np.sum(np.power(np.array([item['r_value'] for item in refinedout[badidx]]),2))\n",
+    "        \n",
+    "#         print '{0}\\t{1}\\t{2}\\t{3}'.format(\"%.8f\" % r_squared_array[badidx], \"%.8f\" % cumulative_rsqrd_m1, \"%.8f\" % cumulative_rsqrd_m2, \"%.8f\" % cumulative_rsqrd_rf)\n",
+    "            \n",
+    "    elif rf_struct1[badidx] != None:\n",
+    "        refinedout.insert(badidx, [rf_struct1[badidx][rf_bfidx[badidx]], rf_struct2[badidx][rf_bfidx[badidx]]])"
    ]
   },
   {
@@ -692,6 +702,164 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots(4, sharex = True,sharey = True)\n",
+    "\n",
+    "\n",
+    "# SUBPLOT 1: gaze, outliers and original linear regression  -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- \n",
+    "\n",
+    "ax[0].plot(df['time'], df['LEpos_int'])  # plot gaze\n",
+    "ax[0].scatter(df['time'][df['Outlierfiltered']], df['LEpos_int'][df['Outlierfiltered']],color ='r')\n",
+    "ax[0].scatter(df['time'][df['isAmbiguousOutlier']], df['LEpos_int'][df['isAmbiguousOutlier']],color ='y')\n",
+    "\n",
+    "for i in range(n):  \n",
+    "    # plot linear regression\n",
+    "    ax[0].plot(df['time'][outlier_idx[i:i+2]], slope_array[i]*df['time'][outlier_idx[i:i+2]] + intercept_array[i], 'r')\n",
+    "    \n",
+    "    # compute annotation coordinates\n",
+    "    x = df['time'][outlier_idx[i]] + np.diff(df['time'][outlier_idx[i:i+2]])[0]/2.0\n",
+    "    y = np.diff(slope_array[i]*df['time'][outlier_idx[i:i+2]] + intercept_array[i])[0]/2.0\n",
+    "    ax[0].annotate('{0}'.format(\"%.2f\" % r_squared_array[i]), xy=(x,y), horizontalalignment='center', verticalalignment='bottom')\n",
+    "\n",
+    "    \n",
+    "# SUBPLOT 2: gaze and refined linear regression method 1 (ambiguous outliers) -- -- -- -- -- -- -- -- -- -- -- -- -- -- \n",
+    "ax[1].plot(df['time'], df['LEpos_int'])  # plot gaze\n",
+    "\n",
+    "for fit in (m1_struct):\n",
+    "    if fit != None:\n",
+    "        for j in range(len(fit)):\n",
+    "            a = fit[j]\n",
+    "            axaxis = np.array([a['start'],a['end']])\n",
+    "            ax[1].plot(axaxis, a['slope']*axaxis + a['intercept'], 'g')\n",
+    "\n",
+    "            # compute annotation coordinates\n",
+    "            x = axaxis[0] + np.diff(axaxis)[0]/2.0\n",
+    "            y = np.diff(a['slope']*axaxis + a['intercept'])[0]/2.0 + 2\n",
+    "            ax[1].annotate('{0}'.format(\"%.2f\" % a['r_value']**2), xy=(x,y), horizontalalignment='center', verticalalignment='bottom')\n",
+    "            \n",
+    "            ax[1].plot([a['end'],a['end']], [-2*y,2*y], 'm')\n",
+    "    \n",
+    "    \n",
+    "# SUBPLOT 3: gaze and refined linear regression method 2 (splitting window) -- -- -- -- -- -- -- -- -- -- -- -- -- -- \n",
+    "ax[2].plot(df['time'], df['LEpos_int'])  # plot gaze\n",
+    "\n",
+    "for i in range(len(rf_struct1)):\n",
+    "    if rf_struct1[i] != None:\n",
+    "        a = rf_struct1[i][rf_bfidx[i]]\n",
+    "\n",
+    "        axaxis = np.array([a['start'],a['end']])\n",
+    "        ax[2].plot(axaxis, a['slope']*axaxis + a['intercept'], 'g')\n",
+    "\n",
+    "        # compute annotation coordinates\n",
+    "        x = axaxis[0] + np.diff(axaxis)[0]/2.0\n",
+    "        y = np.diff(a['slope']*axaxis + a['intercept'])[0]/2.0 + 2\n",
+    "        ax[2].annotate('{0}'.format(\"%.2f\" % a['r_value']**2), xy=(x,y), horizontalalignment='center', verticalalignment='bottom')\n",
+    "\n",
+    "        ax[2].plot([a['end'],a['end']], [-np.mean(df['LEpos_int']), np.mean(df['LEpos_int'])], 'y')\n",
+    "\n",
+    "\n",
+    "        a = rf_struct2[i][rf_bfidx[i]]\n",
+    "\n",
+    "        axaxis = np.array([a['start'],a['end']])\n",
+    "        ax[2].plot(axaxis, a['slope']*axaxis + a['intercept'], 'g')\n",
+    "\n",
+    "        # compute annotation coordinates\n",
+    "        x = axaxis[0] + np.diff(axaxis)[0]/2.0\n",
+    "        y = np.diff(a['slope']*axaxis + a['intercept'])[0]/2.0 + 2\n",
+    "        ax[2].annotate('{0}'.format(\"%.2f\" % a['r_value']**2), xy=(x,y), horizontalalignment='center', verticalalignment='bottom')\n",
+    "        \n",
+    "        ax[2].plot([a['end'],a['end']], [-2*y,2*y], 'm')\n",
+    "\n",
+    "    \n",
+    "# SUBPLOT 3: gaze and refined linear regression with best method -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- \n",
+    "ax[3].plot(df['time'], df['LEpos_int'])  # plot gaze\n",
+    "\n",
+    "for fit in (refinedout):\n",
+    "    if fit != None:\n",
+    "        for j in range(len(fit)):\n",
+    "            a = fit[j]\n",
+    "            axaxis = np.array([a['start'],a['end']])\n",
+    "            ax[3].plot(axaxis, a['slope']*axaxis + a['intercept'], 'g')\n",
+    "\n",
+    "            # compute annotation coordinates\n",
+    "            x = axaxis[0] + np.diff(axaxis)[0]/2.0\n",
+    "            y = np.diff(a['slope']*axaxis + a['intercept'])[0]/2.0 + 2\n",
+    "            ax[3].annotate('{0}'.format(\"%.2f\" % a['r_value']**2), xy=(x,y), horizontalalignment='center', verticalalignment='bottom')\n",
+    "\n",
+    "            ax[3].plot([a['end'],a['end']], [-2*y,2*y], 'm')\n",
+    "\n",
+    "    \n",
+    "\n",
+    "f.suptitle(ds.filename)\n",
+    "ax[0].set_title('eye gaze with linear regression and r squared values')\n",
+    "ax[1].set_title('refined linear regression: method 1 (ambiguous outliers)')\n",
+    "ax[2].set_title('refined linear regression: method 2 (split interval)')\n",
+    "ax[3].set_title('greater summed r squared')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
@@ -747,18 +915,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.7"
   }
  },
  "nbformat": 4,
