--- a/_Analysis/IPython Walkthroughs/Linear_regression_on_eyetracker_data.ipynb
+++ b/_Analysis/IPython Walkthroughs/Linear_regression_on_eyetracker_data.ipynb
@@ -111,15 +111,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -178,9 +169,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 147,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -200,13 +191,25 @@
     "\n",
     "    \"\"\"\n",
     "    lr_idx = np.arange(start, end)                                                                                  # indices array\n",
+    "    n = len(lr_idx)\n",
+    "    x = df[xlabel][lr_idx]\n",
+    "    y = df[ylabel][lr_idx]\n",
     "\n",
-    "    # compute linear regression\n",
-    "    slope, intercept, r_value, p_value, std_err = stats.linregress(df[xlabel][lr_idx], df[ylabel][lr_idx])\n",
+    "    # compute linear regression:\n",
+    "    slope, intercept, r_value, p_value, std_err = stats.linregress(x,y)\n",
+    "    \n",
+    "    # additional calculations:\n",
+    "    r_squared = r_value**2\n",
+    "    resids = y - np.dot(np.vstack([np.ones(n), x]).T, [intercept, slope])       # e = y - Xa; \n",
+    "    RSS = sum(resids**2) # residual sum of squares\n",
+    "    TSS = sum((y - np.mean(y))**2) # total sum of squares\n",
+    "    R2 = 1 - RSS/TSS\n",
+    "    std_y = np.sqrt(TSS/(n-1)) \n",
     "\n",
-    "    # add results to temporal struct\n",
+    "    # add results to temporal struct:\n",
     "    tmp = {'start':df['time'][start], 'end': df['time'][end], 'start_idx': start, 'end_idx':end,\n",
-    "                 'slope':slope, 'intercept': intercept, 'r_value': r_value, 'p_value': p_value, 'std_err': std_err}\n",
+    "                 'slope':slope, 'intercept': intercept, 'r_value': r_value, 'p_value': p_value, 'std_err': std_err,\n",
+    "           'r_squared': r_squared, 'resids': resids, 'RSS': RSS, 'TSS': TSS, 'R2': R2, 'std_y': std_y}\n",
     "\n",
     "    return tmp\n",
     "\n",
