Linear_regression_on_eyetracker_data: add classify stage

--- a/_Analysis/IPython Walkthroughs/Linear_regression_on_eyetracker_data.ipynb
+++ b/_Analysis/IPython Walkthroughs/Linear_regression_on_eyetracker_data.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -208,7 +208,7 @@
     "            use_m1 = rthere > 0\n",
     "            if use_m1:\n",
     "                tmp_m1 = method1_useamboutls(df, itvl_start, itvl_end, minsamples)\n",
-    "                m1_struct.insert(i,tmp_m1)"
+    "                m1_struct[i] = tmp_m1"
    ]
   },
   {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -305,9 +305,9 @@
     "            itvl_end = outlier_idx[i+1]\n",
     "            sgmts1, sgmts2, bfidx = method2_splitintrvl(df, itvl_start, itvl_end, maxdivisions, minsamples, fs = 120.0)\n",
     "            \n",
-    "            rf_struct1.insert(i,sgmts1)\n",
-    "            rf_struct2.insert(i,sgmts2)\n",
-    "            rf_bfidx.insert(i,bfidx)"
+    "            rf_struct1[i] = sgmts1\n",
+    "            rf_struct2[i] = sgmts2\n",
+    "            rf_bfidx[i] = bfidx"
    ]
   },
   {
@@ -414,25 +414,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'r_squared_array' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-ee6b2b3d796f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbadfit_idx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mr_squared_array\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mbadfitth\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mrefinedout\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mNone\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mbadidx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mbadfit_idx\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mm1_struct\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mbadidx\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'r_squared_array' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "badfit_idx = np.where(r_squared_array < badfitth)[0]\n",
+    "# badfit_idx = np.where(r_squared_array < badfitth)[0]\n",
+    "badfit_idx = np.where(np.array([fit['r_squared'] for fit in lr_struct]) < badfitth)[0]\n",
     "refinedout = [None] * n\n",
     "\n",
     "for badidx in badfit_idx:\n",
@@ -446,9 +435,7 @@
     "            refinedout.insert(badidx, m1_struct[badidx])\n",
     "            \n",
     "        cumulative_rsqrd_rf = np.sum(np.power(np.array([item['r_value'] for item in refinedout[badidx]]),2))\n",
-    "        \n",
-    "#         print '{0}\\t{1}\\t{2}\\t{3}'.format(\"%.8f\" % r_squared_array[badidx], \"%.8f\" % cumulative_rsqrd_m1, \"%.8f\" % cumulative_rsqrd_m2, \"%.8f\" % cumulative_rsqrd_rf)\n",
-    "            \n",
+    "                   \n",
     "    elif rf_struct1[badidx] != None:\n",
     "        refinedout.insert(badidx, [rf_struct1[badidx][rf_bfidx[badidx]], rf_struct2[badidx][rf_bfidx[badidx]]])"
    ]
@@ -627,41 +614,126 @@
     "collapsed": true
    },
    "source": [
-    "#NEXT STEP: CLASSIFY PERCEPTS\n",
-    "1 - Create new struct and fill it with good fits of the original linear regression and the best from the refined\n",
-    "\n",
-    "2 -"
+    "#NEXT STEP: CLASSIFY PERCEPTS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1 - Create new struct and fill it with good fits of the original linear regression and the best from the refined"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "for i in range(n):\n",
-    "    if i in badfit"
+    "newlrstruct = []\n",
+    "for i in range(n):                     # for all the outlier-intervals\n",
+    "    if i in badfit_idx and refinedout[i] != None:                # if it is a bad fit in the original linear regression\n",
+    "        for item in refinedout[i]:\n",
+    "            newlrstruct.append(item)\n",
+    "    else:                              # if it was a good fit\n",
+    "        newlrstruct.append(lr_struct[i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2 - Define threshold of length of interval, slope and r squared"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "threslen = 30       # minimal segment length\n",
+    "thresslo = 0.0007   # slope threshold\n",
+    "thresrsq = badfitth # r squared threshold"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "2 - For each fit, get the length, the slope and the r squared"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "elsec = 0\n",
+    "ifc = 0\n",
+    "for fit in newlrstruct:\n",
+    "    fit['percept'] = classifyfit(fit)          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def classifyfit(fit, threslen = 30, thresslo = 0.0007, thresrsq = 0.3):\n",
+    "    \"\"\"\n",
+    "        Compute the percept for a given fit.\n",
+    "        Three possibilities: A, B, ambiguous\n",
+    "        \n",
+    "        Input:\n",
+    "        - fit: dict containing the result of a linear regression using regressionbtwpoints()\n",
+    "        - threslen: minimum interval length. If len(fit) < threslen, percept = ambiguous\n",
+    "        - thresslo: minimum slope absolute value.\n",
+    "        - thresrsq: minimum r squared value.\n",
+    "        \n",
+    "        Output:\n",
+    "        - percept: 'A', 'B', 'amg'\n",
+    "        \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # get length of interval in samples:\n",
+    "    fit_len = fit['end_idx'] - fit['start_idx']\n",
+    "\n",
+    "    # condition 1: interval larger than threslen:\n",
+    "    c1 = fit_len >= threslen\n",
+    "\n",
+    "    # condition 2.1: absolute value of slope larger than thresslo:\n",
+    "    c21 = np.abs(fit['slope']) > thresslo\n",
+    "\n",
+    "    # condition 2.2: slope value positive or negative:\n",
+    "    c22 = fit['slope'] > 0 # slope<0: A, slope>0: B\n",
+    "\n",
+    "    # condition 3: r squared higher than thresrsq:\n",
+    "    c3 = fit['r_squared'] > thresrsq\n",
+    "\n",
+    "    # classify percept -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- \n",
+    "    if c1 and c21 and c3:\n",
+    "        if c22:\n",
+    "            percept = 'B'\n",
+    "        else:\n",
+    "            percept = 'A'\n",
+    "    else\n",
+    "        percept = 'ambg'\n",
+    "        \n",
+    "    return percept"
+   ]
   },
   {
    "cell_type": "code",
@@ -679,34 +751,33 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "f, ax = plt.subplots(1, sharex = True,sharey = True)\n",
+    "\n",
+    "# SUBPLOT 1: gaze, outliers and original linear regression  -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- \n",
+    "\n",
+    "ax.plot(df['time'], df['LEpos_int'])  # plot gaze\n",
+    "ax.scatter(df['time'][df['Outlierfiltered']], df['LEpos_int'][df['Outlierfiltered']],color ='r')\n",
+    "ax.scatter(df['time'][df['isAmbiguousOutlier']], df['LEpos_int'][df['isAmbiguousOutlier']],color ='y')\n",
+    "\n",
+    "for i in range(n):  \n",
+    "    a = newlrstruct[i]\n",
+    "    if abs(a['slope']) < 10.0008:\n",
+    "        axaxis = np.array([a['start'],a['end']])\n",
+    "        ax.plot(axaxis, a['slope']*axaxis + a['intercept'], 'r')\n",
+    "\n",
+    "        # compute annotation coordinates\n",
+    "        x = axaxis[0] + np.diff(axaxis)[0]/2.0\n",
+    "        y = np.diff(a['slope']*axaxis + a['intercept'])[0]/2.0 + 2\n",
+    "        ax.annotate('r^2: {0}\\nRSS: {1}\\nslp: {2}\\n{3}'.format(\n",
+    "                        \"%.2f\" % a['r_value']**2,\"%.2f\" % a['RSS'], \"%.4f\" % a['slope'], a['percept']),\n",
+    "                               xy=(x,y), horizontalalignment='center', verticalalignment='bottom')   \n",
+    "\n",
+    "f.suptitle(ds.filename)\n",
+    "ax.set_title('eye gaze with linear regression and r squared values')\n",
+    "\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
